# sdialog

./: .all-contributorsrc  .gitignore  1.single_llm_full_generation.ipynb  2.multi-agent_generation.ipynb  3.multi-agent+orchestrator_generation.ipynb  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  travis.yml
.github/: codecov.yml
.github/workflows/: ci.yml
docs/: conf.py  index.rst  requirements.txt
docs/api/: index.rst
docs/examples/: index.rst
docs/sdialog/: index.rst
misc/audio/: 1.json  demo_audio_generation.py
misc/audio/Generation/: demo_audio_generation.py  sdialog
misc/audio/TTS-Samples/: TTS_Examples.md
misc/audio/TTS-Samples/samples/: convert_audios.py  generate_audios_chatterbox.py  generate_audios_kokoro.py  generate_audios_xttsv2.py  generate_audios_zipvoice.sh
src/sdialog/: __init__.py  audio.py  datasets.py  generators.py  orchestrators.py  personas.py  util.py
src/sdialog/audio/: __init__.py  evaluation.py
tests/: test_datasets.py  test_generators.py  test_hf.ipynb  test_orchestrators.py  test_personas.py  test_sdialog.py  test_util.py
tests/misc/: test_hf.ipynb
tutorials/: 1.single_llm_full_generation.ipynb  2.multi-agent_generation.ipynb  3.multi-agent+orchestrator_generation.ipynb  Apptainer  README.md  apptainer_build.sbatch  requirements.txt
tutorials/datasets/: README.md
tutorials/output/STAR/full-generation/txt/: 1.txt  1848.txt  1886.txt  1896.txt  1899.txt  1942.txt  1963.txt  1970.txt  2103.txt  2228.txt  2273.txt  2487.txt  2526.txt  2578.txt  2579.txt  2624.txt  2699.txt  2733.txt  3007.txt  3024.txt  3050.txt  3071.txt  3073.txt  3086.txt  3088.txt  3110.txt  3116.txt  3126.txt  3136.txt  3155.txt  3198.txt  3202.txt  3210.txt  3234.txt  3254.txt  3264.txt  3269.txt  3274.txt  3298.txt  3316.txt  (+65 more)
tutorials/output/STAR/multi-agents+orchestration/txt/: 1.txt  1848.txt  1886.txt  1896.txt  1899.txt  1942.txt  1963.txt  1970.txt  2103.txt  2228.txt  2273.txt  2487.txt  2526.txt  2578.txt  2579.txt  2624.txt  2699.txt  2733.txt  3007.txt  3024.txt  3050.txt  3071.txt  3073.txt  3086.txt  3088.txt  3110.txt  3116.txt  3126.txt  3136.txt  3155.txt  3198.txt  3202.txt  3210.txt  3234.txt  3254.txt  3264.txt  3269.txt  3274.txt  3298.txt  3316.txt  (+65 more)
tutorials/output/STAR/multi-agents/txt/: 1.txt  1848.txt  1886.txt  1896.txt  (+101 more)
tutorials/output/STAR/original/: 1.txt  1848.txt  1886.txt  1896.txt  1899.txt  1942.txt  1963.txt  1970.txt  2103.txt  2228.txt  2273.txt  2487.txt  2526.txt  2578.txt  2579.txt  2624.txt  2699.txt  2733.txt  3007.txt  3024.txt  3050.txt  3071.txt  3073.txt  3086.txt  3088.txt  3110.txt  3116.txt  3126.txt  3136.txt  3155.txt  3198.txt  3202.txt  3210.txt  3234.txt  3254.txt  3264.txt  3269.txt  3274.txt  3298.txt  3316.txt  (+65 more)
