[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sdialog"
authors = [
  { name="Sergio Burdisso", email="sergio.burdisso@gmail.com" },
]
description = "Synthetic Dialogue Generation and Analysis"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "sdialog.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/idiap/sdialog"
Issues = "https://github.com/idiap/sdialog/issues"
Source = "https://github.com/idiap/sdialog"
Documentation = "https://github.com/idiap/sdialog/blob/main/README.md"

[flake8]
max-line-length=120
